--- a/index.html
+++ b/index.html
@@ -24,7 +24,44 @@
   </head>
   <body>
     <!--==================== HEADER ====================-->
-    <header class="header" id="header"></header>
+    <header class="header" id="header">
+      <nav class="nav container">
+        <a href="#" class="nav__logo">
+          <img src="assets/img/logo-skull.png" alt="Logo Img" />
+          Halloween
+        </a>
+
+        <div class="nav__menu" id="nav-menu">
+          <ul class="nav__list">
+            <li class="nav__item">
+              <a href="#home" class="nav__link"> Home </a>
+            </li>
+
+            <li class="nav__item">
+              <a href="#about" class="nav__link"> About Us </a>
+            </li>
+
+            <li class="nav__item">
+              <a href="#items" class="nav__link"> Items </a>
+            </li>
+
+            <li class="nav__item">
+              <a href="#party" class="nav__link"> Party </a>
+            </li>
+          </ul>
+
+          <div class="nav__close" id="nav-close">
+            <i class="ri-close-line"></i>
+          </div>
+
+          <img src="assets/img/nav-bat.png" alt="Nav Img" class="nav__img" />
+        </div>
+
+        <div class="nav__toggle" id="nav-toggle">
+          <i class="ri-menu-4-line"></i>
+        </div>
+      </nav>
+    </header>
 
     <!--==================== MAIN ====================-->
     <main class="main">
