--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     <title>HWB - JERS</title>
   </head>
   <body>
+    <img src="assets/img/shape-bg.png" alt="Shape img" class="shape__bg" />
     <!--==================== HEADER ====================-->
     <header class="header" id="header">
       <nav class="nav container">
@@ -67,6 +68,9 @@
     <main class="main">
       <!--==================== HOME ====================-->
       <section class="home section" id="home">
+        <div class="shape__small"></div>
+        <div class="shape__big"></div>
+
         <div class="home__container container grid">
           <div class="home__data">
             <h1 class="home__title">
@@ -111,7 +115,73 @@
       </section>
 
       <!--==================== CATEGORY ====================-->
-      <section class="category section"></section>
+      <section class="category section">
+        <div class="shape__small"></div>
+
+        <h2 class="section__title">
+          Choose youy <br />
+          spooky category
+        </h2>
+
+        <div class="category__container container grid">
+          <div class="category__card">
+            <img
+              src="assets/img/category-pumpkin.png"
+              alt="category img"
+              class="category__img"
+            />
+
+            <h3 class="category__title">Pumpkins</h3>
+            <p class="category__description">
+              Light up horror pumpkins to scare at night
+            </p>
+
+            <img
+              src="assets/img/stars.png"
+              alt="category Star"
+              class="category__star"
+            />
+          </div>
+
+          <div class="category__card">
+            <img
+              src="assets/img/category-ghost.png"
+              alt="category img"
+              class="category__img"
+            />
+
+            <h3 class="category__title">Ghost</h3>
+            <p class="category__description">
+              Spooky ghosts to scare in the most haunted houses
+            </p>
+
+            <img
+              src="assets/img/stars.png"
+              alt="category Star"
+              class="category__star"
+            />
+          </div>
+
+          <div class="category__card">
+            <img
+              src="assets/img/category-witch-hat.png"
+              alt="category img"
+              class="category__img"
+            />
+
+            <h3 class="category__title">Witch Hat</h3>
+            <p class="category__description">
+              The most elegant witch hats you can wear and scare
+            </p>
+
+            <img
+              src="assets/img/stars.png"
+              alt="category Star"
+              class="category__star"
+            />
+          </div>
+        </div>
+      </section>
 
       <!--==================== ABOUT ====================-->
       <section class="about section" id="about"></section>
