--- a/index.html
+++ b/index.html
@@ -184,7 +184,33 @@
       </section>
 
       <!--==================== ABOUT ====================-->
-      <section class="about section" id="about"></section>
+      <section class="about section" id="about">
+        <div class="shape__small"></div>
+        <div class="shape__big"></div>
+
+        <div class="about__container container grid">
+          <div class="about__data">
+            <h2 class="section__title">
+              About The Night <br />
+              Of Terror
+            </h2>
+
+            <p class="about__description">
+              Halloween is celebrated every October 31 at night, walk around the
+              city with your friends an trick or treat, enjoy this celebration
+              under the full moon.
+            </p>
+
+            <a href="#" class="button">Know More!!!</a>
+          </div>
+
+          <img
+            src="assets/img/about-scare.png"
+            alt="About Img"
+            class="about__img"
+          />
+        </div>
+      </section>
 
       <!--==================== ITEMS ====================-->
       <section class="items section" id="items"></section>
