--- a/index.html
+++ b/index.html
@@ -213,10 +213,129 @@
       </section>
 
       <!--==================== ITEMS ====================-->
-      <section class="items section" id="items"></section>
+      <section class="items section" id="items">
+        <div class="shape__big"></div>
+
+        <h2 class="section__title">
+          Select your <br />
+          lost item.
+        </h2>
+
+        <div class="items__container container grid">
+          <article class="items__card">
+            <img
+              src="assets/img/item-apple.png"
+              alt="Items Img"
+              class="items__img"
+            />
+
+            <h3 class="items__name">Candy Apple</h3>
+            <span class="items__price">$4.99</span>
+
+            <button class="items__button">
+              <i class="ri-heart-3-line"></i>
+            </button>
+          </article>
+
+          <article class="items__card">
+            <img
+              src="assets/img/item-broom.png"
+              alt="Items Img"
+              class="items__img"
+            />
+
+            <h3 class="items__name">Witch Broom</h3>
+            <span class="items__price">$12.99</span>
+
+            <button class="items__button">
+              <i class="ri-heart-3-line"></i>
+            </button>
+          </article>
+
+          <article class="items__card">
+            <img
+              src="assets/img/item-pumpkin.png"
+              alt="Items Img"
+              class="items__img"
+            />
+
+            <h3 class="items__name">Pumpkin</h3>
+            <span class="items__price">$7.99</span>
+
+            <button class="items__button">
+              <i class="ri-heart-3-line"></i>
+            </button>
+          </article>
+
+          <article class="items__card">
+            <img
+              src="assets/img/item-spider.png"
+              alt="Items Img"
+              class="items__img"
+            />
+
+            <h3 class="items__name">Spider</h3>
+            <span class="items__price">$9.99</span>
+
+            <button class="items__button">
+              <i class="ri-heart-3-line"></i>
+            </button>
+          </article>
+
+          <article class="items__card">
+            <img
+              src="assets/img/item-witch-hat.png"
+              alt="Items Img"
+              class="items__img"
+            />
+
+            <h3 class="items__name">Witch Hat</h3>
+            <span class="items__price">$15.99</span>
+
+            <button class="items__button">
+              <i class="ri-heart-3-line"></i>
+            </button>
+          </article>
+        </div>
+      </section>
 
       <!--==================== PARTY ====================-->
-      <section class="party section" id="party"></section>
+      <section class="party section" id="party">
+        <div class="party__container container grid">
+          <div class="party__data">
+            <h2 class="section__title">
+              Halloween <br />
+              Party 31 October
+            </h2>
+
+            <p class="party__description">
+              Organize a great Halloween party and enjoy the creepiest night of
+              terror with all your friends.
+            </p>
+
+            <a href="#" class="button">Start The Party!!!</a>
+          </div>
+
+          <div class="party__images">
+            <img
+              src="assets/img/party-cauldron.png"
+              alt="Party Img"
+              class="party__img"
+            />
+
+            <img
+              src="assets/img/stars.png"
+              alt="Party Stars"
+              class="party__star-1"
+            />
+            <img
+              src="assets/img/stars.png"
+              alt="Party Stars"
+              class="party__star-2"
+            />
+          </div>
+        </div>
+      </section>
     </main>
 
     <!--==================== FOOTER ====================-->
